--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.4",
     "@nuxt/devtools": "^1.0.8",
+    "@nuxt/image": "^1.3.0",
     "@nuxtjs/tailwindcss": "^6.11.3",
     "eslint": "^8.57.0",
     "nuxt": "^3.10.0",
