--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.4",
+    "@nuxt/content": "^2.12.1",
     "@nuxt/devtools": "^1.0.8",
     "@nuxt/image": "^1.3.0",
     "@nuxtjs/tailwindcss": "^6.11.3",
+    "@tailwindcss/typography": "^0.5.13",
     "eslint": "^8.57.0",
-    "nuxt": "^3.10.0",
+    "nuxt": "^3.12.0",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   }
