--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
+    "lint": "eslint --cache . && prettier -c .",
+    "lint:fix": "eslint --cache --fix . && prettier -w .",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
     "radix-vue": "^1.4.0"
@@ -20,7 +20,10 @@
     "@nuxt/image": "^1.3.0",
     "@nuxtjs/tailwindcss": "^6.11.3",
     "eslint": "^8.57.0",
+    "eslint-config-unjs": "^0.4.1",
     "nuxt": "^3.10.0",
+    "prettier": "^3.3.3",
+    "typescript": "^5.6.2",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   }
