--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "radix-vue": "^1.9.6"
+    "@notionhq/client": "^2.2.15",
+    "radix-vue": "^1.9.6",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@nuxt/image": "^1.8.1",
